--- a/Section 5 - start css/5.1. Adding CSS/external.html
+++ b/Section 5 - start css/5.1. Adding CSS/external.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<!-- External moet ook in <head> staan. Relation link + href -->
 <head>  
 
   <meta charset="UTF-8">
